2006-07-06  Sven Herzberg  <herzi@gnome-de.org>

	* capplets/display/main.c: replaced GtkOptionMenu by GtkComboBox;
	Closes: #338468

2006-07-03  Runa Bhattacharjee <runabh@gmail.com>

        * configure.in: Added Bengali India (bn_IN) to ALL_LINGUAS.

2006-06-25  Sergey Udaltsov <svu@gnome.org>

	* configure.in: enabling DBUS

2006-06-12  Rodrigo Moya <rodrigo@novell.com>

	* configure.in:
	* NEWS: updated for 2.15.3.

2006-05-29  Simos Xenitellis  <simos@gnome.org>

	* configure.in: Added mg (Malagasy) to ALL_LINGUAS.

2006-05-27  Bastien Nocera  <hadess@hadess.net>

	* configure.in: version the libxklavier requirement to avoid
	headaches

2006-05-05  Jürg Billeter  <j@bitron.ch>

	* configure.in: Add gstreamer-0.10 and optionally HAL to sound
	  capplet dependencies.

2006-04-27  Bastien Nocera  <hadess@hadess.net>

	* configure.in: remove checks for fb-level support
	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
	Remove the brightness keybindings (Closes: #339857)

2006-04-22  Sergey Udaltsov <svu@gnome.org>

	* schemas/desktop_gnome_peripherals_keyboard_xkb.schemas.in:
	add gconf variables for the layout preview window position

2006-04-20  Sergey Udaltsov <svu@gnome.org>

	* configure.in:
	* gnome-settings-daemon/gnome-settings-keyboard-xkb.c:
	* capplets/keyboard/*.c:
	* capplets/keyboard/*.h:
	update for new libxklavier API

2006-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO.
	* po/no.po: And the translation.

2006-04-10  Rodrigo Moya <rodrigo@novell.com>

	* configure.in:
	* NEWS: updated for 2.14.1.

2006-04-03  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* capplets/theme-switcher/theme-properties.glade: Don't allow tab
	characters in custom theme descriptions (#336151, Wouter Bolsterlee)

2006-03-29  Jaap A. Haitsma <jaap@haitsma.org>

	Fixes #171833

	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in: set
	Ctrl-Atl-l as default keybinding for screen locking.
