@@ -1,3 +1,8 @@
+2006-07-07  Sven Herzberg  <herzi@gnome-de.org>
+
+	* capplets/display/main.c: added rotation support;
+	Closes: #324125
+
 2006-07-06  Sven Herzberg  <herzi@gnome-de.org>
 
 	* capplets/display/main.c: replaced GtkOptionMenu by GtkComboBox;
